--- a/app/globals.css
+++ b/app/globals.css
@@ -21,31 +21,35 @@ body, ul, h1, h2, h3, p, button, a, div{
   list-style-type: none;
   text-decoration: none;
 }
+
 body{
-  background: rgb(100,0,123);
-  background: radial-gradient(circle, rgba(100,0,123,1) 0%, rgba(62,20,86,1) 100%);
+  background: rgba(243, 13, 13, 0.966);
   overflow: hidden;
 }
+
 button{
-  color: white;
+  color: #fff;
   padding: 10px 30px;
-  font-size: 1em;
+  font-size: 1.2em;
   background: transparent;
   border-radius: 50px;
-  border: 1px solid white;
+  border: 3px solid rgb(255, 255, 255);
   margin: 40px auto 0;
   cursor: pointer;
-  opacity: 0.7;
+  opacity: 0.8;
 }
+
 .container{
   max-width: 300px;
   margin: 100px auto 40px;
 }
+
 .container h3{
   padding-bottom: 10px;
   margin-bottom: 10px;
-  border-bottom: 1px solid rgba(255,255,255,0.2);
+  border-bottom: 1px solid #ffffff33;
 }
+
 .container li{
   padding: 10px;
   cursor: pointer;
@@ -57,15 +61,18 @@ header{
   padding: 40px;
   align-items: center;
 }
+
 header .title{
   flex-grow: 1;
   margin-left: 20px;
   font-size: 0.6em;
 }
+
 header h1{
   border-bottom: 1px solid rgba(255,255,255,0.2);
   padding-bottom: 10px;
 }
+
 header .pizza-svg {
   width: 80px;
   overflow: visible;
@@ -79,8 +86,9 @@ header .pizza-svg {
 li span.active{
   font-weight: bold;
 }
+
 li span.active::before{
-  content: '>';
+  content: '>>>';
   position: relative;
   top: -2px;
   margin-right: 6px;
@@ -93,18 +101,22 @@ li span.active::before{
   font-size: 2em;
   margin-bottom: 30px;
 }
+
 .home.container, 
 .order.container{
   text-align: center;
   max-width: 800px;
 }
+
 .home button{
   color: white;
   padding: 15px 30px;
+  font-weight: 800;
   font-size: 1.6em;
   border: 3px solid white;
   margin: 30px 20px;
 }
+
 .order p{
   margin: 20px auto;
 }
